test/end-to-end/runnable/set-field-through-pointer.crow
import
	crow/io/print: out, print

main void() unsafe, summon
	r mut r = 0,
	rp r mut* = &r
	rp->x := 3
	out print "{r x}"

r record by-val, mut
	x mut nat
