test/end-to-end/compile-errors/pointer-mutability.crow
main void() unsafe
	r mut r = 1, 2
	p r* = &r
	mp r mut* = &r
	_ nat* = &p->x
	_ nat mut* = &p->x
	_ nat* = &p->y
	_ nat mut* = &p->y
	_ nat* = &mp->x
	_ nat mut* = &mp->x
	_ nat* = &mp->y
	_ nat mut* = &mp->y
	()

r record by-val, mut
	x nat
	y mut nat
